create class for serialization result e.g. for usage in chunkers
Signed-off-by: Panos Vagenas <pva@zurich.ibm.com>

--- a/examples/serialization.ipynb
+++ b/examples/serialization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,13 +63,13 @@
     "serializer = MarkdownDocSerializer(\n",
     "    doc=doc,\n",
     ")\n",
-    "text = serializer.serialize()\n",
+    "text = serializer.serialize().text\n",
     "print(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,10 +104,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from docling_core.transforms.serializer.base import SerializationResult\n",
+    "\n",
+    "\n",
     "class AnnotationMarkdownPictureSerializer(MarkdownPictureSerializer):\n",
     "    def serialize(\n",
     "        self,\n",
@@ -117,11 +120,11 @@
     "        doc: DoclingDocument,\n",
     "        image_mode: ImageRefMode,\n",
     "        **kwargs,\n",
-    "    ):\n",
-    "        parts: list[str] = []\n",
+    "    ) -> SerializationResult:\n",
+    "        text_parts: list[str] = []\n",
     "\n",
     "        # annotation\n",
-    "        ann_parts: list[str] = []\n",
+    "        ann_text_parts: list[str] = []\n",
     "        for annotation in item.annotations:\n",
     "            if isinstance(annotation, PictureClassificationData):\n",
     "                predicted_class = (\n",
@@ -130,32 +133,34 @@
     "                    else None\n",
     "                )\n",
     "                if predicted_class is not None:\n",
-    "                    ann_parts.append(f\"Picture type: {predicted_class}\")\n",
+    "                    ann_text_parts.append(f\"Picture type: {predicted_class}\")\n",
     "            elif isinstance(annotation, PictureMoleculeData):\n",
-    "                ann_parts.append(f\"SMILES: {annotation.smi}\")\n",
+    "                ann_text_parts.append(f\"SMILES: {annotation.smi}\")\n",
     "            elif isinstance(annotation, PictureDescriptionData):\n",
-    "                ann_parts.append(f\"Description: {annotation.text}\")\n",
+    "                ann_text_parts.append(f\"Description: {annotation.text}\")\n",
     "\n",
-    "        ann_txt = \"\\n\\n\".join(ann_parts)\n",
-    "        ann_txt = doc_serializer.post_process(text=ann_txt)\n",
-    "        if ann_txt:\n",
-    "            parts.append(ann_txt)\n",
+    "        ann_text = \"\\n\\n\".join(ann_text_parts)\n",
+    "        ann_text = doc_serializer.post_process(text=ann_text)\n",
+    "        if ann_text:\n",
+    "            text_parts.append(ann_text)\n",
     "\n",
     "        # actual image\n",
-    "        img_txt = self._serialize_image_part(\n",
+    "        img_text = self._serialize_image_part(\n",
     "            item=item,\n",
     "            doc=doc,\n",
     "            image_mode=image_mode,\n",
-    "        )\n",
-    "        if img_txt:\n",
-    "            parts.append(img_txt)\n",
-    "        res = \"\\n\\n\".join(parts)\n",
-    "        return res"
+    "        ).text\n",
+    "        if img_text:\n",
+    "            text_parts.append(img_text)\n",
+    "\n",
+    "        text_res = \"\\n\\n\".join(text_parts)\n",
+    "\n",
+    "        return SerializationResult(text=text_res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -181,13 +186,13 @@
     "    include_formatting=True,\n",
     "    include_hyperlinks=True,\n",
     ")\n",
-    "text = serializer.serialize()\n",
+    "text = serializer.serialize().text\n",
     "print(text)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -287,13 +292,13 @@
     "serializer = MarkdownDocSerializer(\n",
     "    doc=doc,\n",
     ")\n",
-    "text = serializer.serialize()\n",
+    "text = serializer.serialize().text\n",
     "print(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -349,95 +354,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# Title of the Document\n",
-      "\n",
-      "## 1. Introduction\n",
-      "\n",
-      "| Product   |   Years |   Years |\n",
-      "|-----------|---------|---------|\n",
-      "| Product   |    2016 |    2017 |\n",
-      "| Apple     |   49823 |  695944 |\n",
-      "\n",
-      "- item 1 of neighboring list\n",
-      "- item 2 of neighboring list\n",
-      "    - item 1 of sub list\n",
-      "    - Here a code snippet: `<p>Hello world</p>` (to be displayed inline)\n",
-      "    - Here a formula: $E=mc^2$ (to be displayed inline)\n",
-      "\n",
-      "Here a code block:\n",
-      "\n",
-      "```\n",
-      "print(\"Hello world\")\n",
-      "```\n",
-      "\n",
-      "Here a formula block:\n",
-      "\n",
-      "$$E=mc^2$$\n",
-      "\n",
-      "Some formatting chops: **bold** *italic* underline ~~strikethrough~~ [hyperlink](.) &amp; [~~***everything at the same time.***~~](https://github.com/DS4SD/docling)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "serializer = MarkdownDocSerializer(\n",
     "    doc=doc,\n",
     "    include_formatting=True,\n",
     "    include_hyperlinks=True,\n",
     ")\n",
-    "text = serializer.serialize()\n",
+    "text = serializer.serialize().text\n",
     "print(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "# Title of the Document\n",
-       "\n",
-       "## 1. Introduction\n",
-       "\n",
-       "| Product   |   Years |   Years |\n",
-       "|-----------|---------|---------|\n",
-       "| Product   |    2016 |    2017 |\n",
-       "| Apple     |   49823 |  695944 |\n",
-       "\n",
-       "- item 1 of neighboring list\n",
-       "- item 2 of neighboring list\n",
-       "    - item 1 of sub list\n",
-       "    - Here a code snippet: `<p>Hello world</p>` (to be displayed inline)\n",
-       "    - Here a formula: $E=mc^2$ (to be displayed inline)\n",
-       "\n",
-       "Here a code block:\n",
-       "\n",
-       "```\n",
-       "print(\"Hello world\")\n",
-       "```\n",
-       "\n",
-       "Here a formula block:\n",
-       "\n",
-       "$$E=mc^2$$\n",
-       "\n",
-       "Some formatting chops: **bold** *italic* underline ~~strikethrough~~ [hyperlink](.) &amp; [~~***everything at the same time.***~~](https://github.com/DS4SD/docling)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(Markdown(text))"
    ]
