commit unsaved notebook changes
Signed-off-by: Panos Vagenas <pva@zurich.ibm.com>

--- a/examples/serialization.ipynb
+++ b/examples/serialization.ipynb
@@ -354,9 +354,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Title of the Document\n",
+      "\n",
+      "## 1. Introduction\n",
+      "\n",
+      "| Product   |   Years |   Years |\n",
+      "|-----------|---------|---------|\n",
+      "| Product   |    2016 |    2017 |\n",
+      "| Apple     |   49823 |  695944 |\n",
+      "\n",
+      "- item 1 of neighboring list\n",
+      "- item 2 of neighboring list\n",
+      "    - item 1 of sub list\n",
+      "    - Here a code snippet: `<p>Hello world</p>` (to be displayed inline)\n",
+      "    - Here a formula: $E=mc^2$ (to be displayed inline)\n",
+      "\n",
+      "Here a code block:\n",
+      "\n",
+      "```\n",
+      "print(\"Hello world\")\n",
+      "```\n",
+      "\n",
+      "Here a formula block:\n",
+      "\n",
+      "$$E=mc^2$$\n",
+      "\n",
+      "Some formatting chops: **bold** *italic* underline ~~strikethrough~~ [hyperlink](.) &amp; [~~***everything at the same time.***~~](https://github.com/DS4SD/docling)\n"
+     ]
+    }
+   ],
    "source": [
     "serializer = MarkdownDocSerializer(\n",
     "    doc=doc,\n",
@@ -369,9 +402,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "# Title of the Document\n",
+       "\n",
+       "## 1. Introduction\n",
+       "\n",
+       "| Product   |   Years |   Years |\n",
+       "|-----------|---------|---------|\n",
+       "| Product   |    2016 |    2017 |\n",
+       "| Apple     |   49823 |  695944 |\n",
+       "\n",
+       "- item 1 of neighboring list\n",
+       "- item 2 of neighboring list\n",
+       "    - item 1 of sub list\n",
+       "    - Here a code snippet: `<p>Hello world</p>` (to be displayed inline)\n",
+       "    - Here a formula: $E=mc^2$ (to be displayed inline)\n",
+       "\n",
+       "Here a code block:\n",
+       "\n",
+       "```\n",
+       "print(\"Hello world\")\n",
+       "```\n",
+       "\n",
+       "Here a formula block:\n",
+       "\n",
+       "$$E=mc^2$$\n",
+       "\n",
+       "Some formatting chops: **bold** *italic* underline ~~strikethrough~~ [hyperlink](.) &amp; [~~***everything at the same time.***~~](https://github.com/DS4SD/docling)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(Markdown(text))"
    ]
