--- a/examples/serialization.ipynb
+++ b/examples/serialization.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import display, Markdown\n",
     "from docling_core.transforms.serializer import MarkdownDocSerializer\n",
     "from docling_core.transforms.serializer import BaseDocSerializer, MarkdownPictureSerializer\n",
     "from docling_core.types.doc.base import ImageRefMode\n",
@@ -55,7 +54,7 @@
       "\n",
       "Figure 1: Four examples of complex page layouts across different document categories\n",
       "\n",
-      "![Image](data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAIAAAD91JpzAAAAC0lEQVR4nGNgQAYAAA4AAamRc7EAAAAASUVORK5CYII=)\n"
+      "<!-- image -->\n"
      ]
     }
    ],
@@ -65,32 +64,6 @@
     ")\n",
     "text = serializer.serialize().text\n",
     "print(text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "# DocLayNet: A Large Human-Annotated Dataset for Document-Layout Analysis\n",
-       "\n",
-       "Figure 1: Four examples of complex page layouts across different document categories\n",
-       "\n",
-       "![Image](data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAIAAAD91JpzAAAAC0lEQVR4nGNgQAYAAA4AAamRc7EAAAAASUVORK5CYII=)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(Markdown(text))"
    ]
   },
   {
@@ -104,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,6 +91,7 @@
     "        item: PictureItem,\n",
     "        doc_serializer: BaseDocSerializer,\n",
     "        doc: DoclingDocument,\n",
+    "        image_placeholder: str,\n",
     "        image_mode: ImageRefMode,\n",
     "        **kwargs,\n",
     "    ) -> SerializationResult:\n",
@@ -148,6 +122,7 @@
     "        img_text = self._serialize_image_part(\n",
     "            item=item,\n",
     "            doc=doc,\n",
+    "            image_placeholder=image_placeholder,\n",
     "            image_mode=image_mode,\n",
     "        ).text\n",
     "        if img_text:\n",
@@ -160,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +150,7 @@
       "\n",
       "SMILES: ...\n",
       "\n",
-      "![Image](data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAIAAAD91JpzAAAAC0lEQVR4nGNgQAYAAA4AAamRc7EAAAAASUVORK5CYII=)\n"
+      "<!-- image -->\n"
      ]
     }
    ],
@@ -191,36 +166,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "# DocLayNet: A Large Human-Annotated Dataset for Document-Layout Analysis\n",
-       "\n",
-       "Picture type: illustration\n",
-       "\n",
-       "Description: ...\n",
-       "\n",
-       "SMILES: ...\n",
-       "\n",
-       "![Image](data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAIAAAD91JpzAAAAC0lEQVR4nGNgQAYAAA4AAamRc7EAAAAASUVORK5CYII=)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(Markdown(text))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -231,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -262,6 +207,8 @@
       "# Title of the Document\n",
       "\n",
       "## 1. Introduction\n",
+      "\n",
+      "This is the caption of table 1.\n",
       "\n",
       "| Product   |   Years |   Years |\n",
       "|-----------|---------|---------|\n",
@@ -284,7 +231,11 @@
       "\n",
       "$$E=mc^2$$\n",
       "\n",
-      "Some formatting chops: bold italic underline strikethrough hyperlink &amp; everything at the same time.\n"
+      "<!-- missing-key-value-item -->\n",
+      "\n",
+      "<!-- missing-form-item -->\n",
+      "\n",
+      "Some formatting chops: **bold** *italic* underline ~~strikethrough~~ [hyperlink](.) &amp; [~~***everything at the same time.***~~](https://github.com/DS4SD/docling)\n"
      ]
     }
    ],
@@ -294,53 +245,6 @@
     ")\n",
     "text = serializer.serialize().text\n",
     "print(text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "# Title of the Document\n",
-       "\n",
-       "## 1. Introduction\n",
-       "\n",
-       "| Product   |   Years |   Years |\n",
-       "|-----------|---------|---------|\n",
-       "| Product   |    2016 |    2017 |\n",
-       "| Apple     |   49823 |  695944 |\n",
-       "\n",
-       "- item 1 of neighboring list\n",
-       "- item 2 of neighboring list\n",
-       "    - item 1 of sub list\n",
-       "    - Here a code snippet: `<p>Hello world</p>` (to be displayed inline)\n",
-       "    - Here a formula: $E=mc^2$ (to be displayed inline)\n",
-       "\n",
-       "Here a code block:\n",
-       "\n",
-       "```\n",
-       "print(\"Hello world\")\n",
-       "```\n",
-       "\n",
-       "Here a formula block:\n",
-       "\n",
-       "$$E=mc^2$$\n",
-       "\n",
-       "Some formatting chops: bold italic underline strikethrough hyperlink &amp; everything at the same time."
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(Markdown(text))"
    ]
   },
   {
@@ -354,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -365,10 +269,7 @@
       "\n",
       "## 1. Introduction\n",
       "\n",
-      "| Product   |   Years |   Years |\n",
-      "|-----------|---------|---------|\n",
-      "| Product   |    2016 |    2017 |\n",
-      "| Apple     |   49823 |  695944 |\n",
+      "This is the caption of table 1.\n",
       "\n",
       "- item 1 of neighboring list\n",
       "- item 2 of neighboring list\n",
@@ -386,15 +287,131 @@
       "\n",
       "$$E=mc^2$$\n",
       "\n",
+      "<!-- missing-key-value-item -->\n",
+      "\n",
+      "<!-- missing-form-item -->\n",
+      "\n",
       "Some formatting chops: **bold** *italic* underline ~~strikethrough~~ [hyperlink](.) &amp; [~~***everything at the same time.***~~](https://github.com/DS4SD/docling)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from docling_core.transforms.serializer.base import _DEFAULT_LABELS\n",
+    "from docling_core.types.doc.document import DOCUMENT_TOKENS_EXPORT_LABELS, ContentLayer\n",
+    "from docling_core.types.doc.labels import DocItemLabel\n",
+    "\n",
+    "\n",
+    "serializer = MarkdownDocSerializer(\n",
+    "    doc=doc,\n",
+    "    labels=DOCUMENT_TOKENS_EXPORT_LABELS - {DocItemLabel.TABLE},\n",
+    ")\n",
+    "text = serializer.serialize().text\n",
+    "print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Title of the Document\n",
+      "\n",
+      "## 1. Introduction\n",
+      "\n",
+      "This is the caption of table 1.\n",
+      "\n",
+      "| Product   |   Years |   Years |\n",
+      "|-----------|---------|---------|\n",
+      "| Product   |    2016 |    2017 |\n",
+      "| Apple     |   49823 |  695944 |\n",
+      "\n",
+      "- item 1 of neighboring list\n",
+      "- item 2 of neighboring list\n",
+      "  - item 1 of sub list\n",
+      "  - Here a code snippet: `<p>Hello world</p>` (to be displayed inline)\n",
+      "  - Here a formula: $E=mc^2$ (to be displayed inline)\n",
+      "\n",
+      "Here a code block:\n",
+      "\n",
+      "```\n",
+      "print(\"Hello world\")\n",
+      "```\n",
+      "\n",
+      "Here a formula block:\n",
+      "\n",
+      "$$E=mc^2$$\n",
+      "\n",
+      "<!-- missing-key-value-item -->\n",
+      "\n",
+      "<!-- missing-form-item -->\n",
+      "\n",
+      "Some formatting chops: **bold** *italic* underline ~~strikethrough~~ [hyperlink](.) &amp; [~~***everything at the same time.***~~](https://github.com/DS4SD/docling)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from docling_core.transforms.serializer.markdown import MarkdownListSerializer\n",
+    "\n",
+    "\n",
+    "serializer = MarkdownDocSerializer(\n",
+    "    doc=doc,\n",
+    "    list_serializer=MarkdownListSerializer(\n",
+    "        indent=2,\n",
+    "    )\n",
+    ")\n",
+    "text = serializer.serialize().text\n",
+    "print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = DoclingDocument.load_from_json(Path(\"2408.09869v5.json\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<!-- image -->\n",
+      "\n",
+      "## Docling Technical Report\n",
+      "\n",
+      "Version 1.0\n",
+      "\n",
+      "Christoph Auer Maksym Lysak Ahmed Nassar Michele Dolfi Nikolaos Livathinos Panos Vagenas Cesar Berrospi Ramis Matteo Omenetti Fabian Lindlbauer Kasper Dinkla Lokesh Mishra Yusik Kim Shubham Gupta Rafael Teixeira de Lima Valery Weber Lucas Morin Ingmar Meijer Viktor Kuropiatnyk Peter W. J. Staar\n",
+      "\n",
+      "AI4K Group, IBM Research R¨ uschlikon, Switzerland\n",
+      "\n",
+      "## Abstract\n",
+      "\n",
+      "This technical report introduces Docling , an easy to use, self-contained, MITlicensed open-source package for PDF document conversion. It is powered by state-of-the-art specialized AI models for layout analysis (DocLayNet) and table structure recognition (TableFormer), and runs efficiently on commodity hardware in a small resource budget. The code interface allows for easy extensibility and addition of new features and models.\n",
+      "\n",
+      "## 1 Introduction\n",
+      "\n",
+      "Converting PDF documents back into a machine-processable format has been a major challenge for decades due to their huge variability in formats, weak standardization and printing-optimized characteristic, which discards most structural features and metadata. With the advent of LLMs and popular application patterns such as retrieval-augmented generation (RAG), leveraging the rich content embedded in PDFs has become ever more relevant. In the past decade, several powerful document understanding solutions have emerged on the market, most of which are commercial software, cloud offerings [3] and most recently, multi-modal vision-language models. As of today, only a handful of open-source tools cover PDF conversion, leaving a significant feature and quality gap to proprietary solutions.\n",
+      "\n",
+      "With Docling , we open-source a very capable and efficient document conversion tool which builds on the powerful, specialized AI models and datasets for layout analysis and table structure recognition we developed and presented in the recent past [12, 13, 9]. Docling is designed as a simple, self-contained python library with permissive license, running entirely locally on commodity hardware. Its code architecture allows for easy extensibility and addition of new features and models.\n"
      ]
     }
    ],
    "source": [
     "serializer = MarkdownDocSerializer(\n",
     "    doc=doc,\n",
-    "    include_formatting=True,\n",
-    "    include_hyperlinks=True,\n",
+    "    pages=[1],\n",
+    "    image_mode=ImageRefMode.PLACEHOLDER,\n",
     ")\n",
     "text = serializer.serialize().text\n",
     "print(text)"
@@ -406,53 +423,33 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/markdown": [
-       "# Title of the Document\n",
-       "\n",
-       "## 1. Introduction\n",
-       "\n",
-       "| Product   |   Years |   Years |\n",
-       "|-----------|---------|---------|\n",
-       "| Product   |    2016 |    2017 |\n",
-       "| Apple     |   49823 |  695944 |\n",
-       "\n",
-       "- item 1 of neighboring list\n",
-       "- item 2 of neighboring list\n",
-       "    - item 1 of sub list\n",
-       "    - Here a code snippet: `<p>Hello world</p>` (to be displayed inline)\n",
-       "    - Here a formula: $E=mc^2$ (to be displayed inline)\n",
-       "\n",
-       "Here a code block:\n",
-       "\n",
-       "```\n",
-       "print(\"Hello world\")\n",
-       "```\n",
-       "\n",
-       "Here a formula block:\n",
-       "\n",
-       "$$E=mc^2$$\n",
-       "\n",
-       "Some formatting chops: **bold** *italic* underline ~~strikethrough~~ [hyperlink](.) &amp; [~~***everything at the same time.***~~](https://github.com/DS4SD/docling)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "## Docling Technical Report\n",
+      "\n",
+      "Version 1.0\n",
+      "\n",
+      "Christoph Auer Maksym Lysak Ahmed Nassar Michele Dolfi Nikolaos Livathinos Panos Vagenas Cesar Berrospi Ramis Matteo Omenetti Fabian Lindlbauer Kasper Dinkla Lokesh Mishra Yusik Kim Shubham Gupta Rafael Teixeira de Lima Valery Weber Lucas Morin Ingmar Meijer Viktor Kuropiatnyk Peter W. J. Staar\n",
+      "\n",
+      "AI4K Group, IBM Research R¨ uschlikon, Switzerland\n",
+      "\n",
+      "## Abstract\n",
+      "\n",
+      "This technical report introduces Docling , an easy to use, self-contained, MITlicensed open-source package for PDF document conversion. It is powered by state-of-the-art specialized AI models for layout analysis (DocLayNet) and table structure recognition (TableFormer), and runs efficiently on commodity hardware in a small resource budget. The code interface allows for easy extensibility and addition of new features and models.\n"
+     ]
     }
    ],
    "source": [
-    "display(Markdown(text))"
+    "serializer = MarkdownDocSerializer(\n",
+    "    doc=doc,\n",
+    "    start=2,\n",
+    "    stop=10,\n",
+    "    image_mode=ImageRefMode.PLACEHOLDER,\n",
+    ")\n",
+    "text = serializer.serialize().text\n",
+    "print(text)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
