make base classes more abstract
Signed-off-by: Panos Vagenas <pva@zurich.ibm.com>

--- a/examples/serialization.ipynb
+++ b/examples/serialization.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from docling_core.transforms.serializer import MarkdownDocSerializer\n",
-    "from docling_core.transforms.serializer import BaseDocSerializer, MarkdownPictureSerializer\n",
+    "from docling_core.transforms.serializer.markdown import MarkdownDocSerializer, MarkdownPictureSerializer\n",
+    "from docling_core.transforms.serializer.base import BaseDocSerializer\n",
     "from docling_core.types.doc.base import ImageRefMode\n",
     "from docling_core.types.doc.document import PictureClassificationData, PictureDescriptionData, PictureItem, PictureMoleculeData"
    ]
@@ -89,8 +89,8 @@
     "        self,\n",
     "        *,\n",
     "        item: PictureItem,\n",
-    "        doc_serializer: BaseDocSerializer,\n",
     "        doc: DoclingDocument,\n",
+    "        doc_serializer: BaseDocSerializer,\n",
     "        image_placeholder: str,\n",
     "        image_mode: ImageRefMode,\n",
     "        **kwargs,\n",
@@ -411,7 +411,7 @@
     "serializer = MarkdownDocSerializer(\n",
     "    doc=doc,\n",
     "    pages=[1],\n",
-    "    image_mode=ImageRefMode.PLACEHOLDER,\n",
+    "    # image_placeholder=\n",
     ")\n",
     "text = serializer.serialize().text\n",
     "print(text)"
@@ -426,6 +426,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<!-- image -->\n",
+      "\n",
       "## Docling Technical Report\n",
       "\n",
       "Version 1.0\n",
@@ -443,13 +445,20 @@
    "source": [
     "serializer = MarkdownDocSerializer(\n",
     "    doc=doc,\n",
-    "    start=2,\n",
+    "    start=1,\n",
     "    stop=10,\n",
     "    image_mode=ImageRefMode.PLACEHOLDER,\n",
     ")\n",
     "text = serializer.serialize().text\n",
     "print(text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
