cache excluded refs, delegate/defer default value definition
Signed-off-by: Panos Vagenas <pva@zurich.ibm.com>

--- a/examples/serialization.ipynb
+++ b/examples/serialization.ipynb
@@ -81,6 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Optional\n",
     "from docling_core.transforms.serializer.base import SerializationResult\n",
     "\n",
     "\n",
@@ -91,10 +92,16 @@
     "        item: PictureItem,\n",
     "        doc: DoclingDocument,\n",
     "        doc_serializer: BaseDocSerializer,\n",
-    "        image_placeholder: str,\n",
-    "        image_mode: ImageRefMode,\n",
+    "        image_mode: Optional[ImageRefMode] = None,\n",
+    "        image_placeholder: Optional[str] = None,\n",
     "        **kwargs,\n",
     "    ) -> SerializationResult:\n",
+    "        my_image_mode = (\n",
+    "            image_mode if image_mode is not None else ImageRefMode.PLACEHOLDER\n",
+    "        )\n",
+    "        my_image_placeholder = (\n",
+    "            image_placeholder if image_placeholder is not None else \"<!-- image -->\"\n",
+    "        )\n",
     "        text_parts: list[str] = []\n",
     "\n",
     "        # annotation\n",
@@ -122,8 +129,8 @@
     "        img_text = self._serialize_image_part(\n",
     "            item=item,\n",
     "            doc=doc,\n",
-    "            image_placeholder=image_placeholder,\n",
-    "            image_mode=image_mode,\n",
+    "            image_mode=my_image_mode,\n",
+    "            image_placeholder=my_image_placeholder,\n",
     "        ).text\n",
     "        if img_text:\n",
     "            text_parts.append(img_text)\n",
